<resources>
    <string name="app_name">Arte e Fede</string>

    <string name="action_telephone">Chiama</string>
    <string name="action_email">Invia email</string>
    <string name="action_video">Mostra video</string>
    <string name="action_map">Mostra sulla mappa</string>

    <string name="diocesi">Diocesi di Acireale</string>
    <string name="itinerari">Itinerari</string>
    <string name="mappa">Mappa</string>
    <string name="foto_video">Foto e Video</string>
    <string name="eventi">Eventi principali</string>
    <string name="info">Informazioni utili</string>
    <string name="credits">Credits</string>
    <string name="credits_comitato"><b>Comitato promotore:</b> S.E.R. mons. Antonino Raspanti, vescovo di Acireale, don Carmelo Sciuto, direttore Ufficio Beni Culturali Ecclesiastici, Associazione Culturale Cento Campanili</string>
    <string name="credits_coordinamento"><b>Coordinamento scientifico:</b> Antonio Agostini, don Carmelo Sciuto</string>
    <string name="credits_testi"><b>Testi:</b> Anna Coco, Maria Coco, Antonella Di Gregorio</string>
    <string name="credits_fotografie"><b>Fotografie:</b> Antonio Agostini, Grazia Musumeci, Antonio Torrisi</string>
    <string name="credits_sviluppo"><b>Sviluppo applicazione mobile:</b> Davide Agostini</string>
    <string name="credits_desc">Progetto per la custodia, la tutela e la valorizzazione di edifici di culto della Diocesi di Acireale, anno 2015.<br />
  			<b>Iniziativa realizzata con il contributo dell\'8x1000 alla Chiesa Cattolica.</b></string>
    <string name="credits_year">2015-2016 Diocesi di Acireale - Tutti i diritti sono riservati</string>
    <string name="long_d">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </string>

    <string name="info_text">Per prenotare le visite guidate agli edifici ecclesiastici attraverso gli itinerari di Arte e Fede rivolgersi a:</string>
    <string name="info_asso"><![CDATA[
        <b>Associazione Culturale Cento Campanili</b><br /> Largo Giovanni XXIII, 4<br /> 95024 Acireale Catania<br /> Italia]]>
    </string>
    <string name="info_sede">+39 095 7639461</string>
    <string name="info_tel">+39 380 7787260</string>
    <string name="info_email">info@associazionecentocampanili.it</string>
    <string name="info_curia">+39 095 601102</string>
    <string name="info_curia_text">(lunedì, mercoledì, venerdì dalle ore 9.30 alle ore 12.30)</string>
    <string name="info_ufficio">+39 095 7637579</string>

    <string name="time">Tempo medio di visita</string>
    <string name="time_path">Tempo medio percorso:</string>

    <string name="no_write_permission_title">Permessi di scrittura</string>
    <string name="no_write_permission_message">L\'applicazione necessita di questo permesso per salvare sul device.</string>
    <string name="no_phone_permission_title">Permessi di chiamata</string>
    <string name="no_phone_permission_message">L\'applicazione necessita di questo permesso per effettuare chiamate.</string>
    <string name="no_location_permission_title">Permessi di localizzazione</string>
    <string name="no_location_permission_message">L\'applicazione necessita di questo permesso per localizzare le chiese a te vicine.</string>

    <string name="no_connection">Connessione internet assente</string>
    <string name="check_connection">Tocca lo schermo per riprovare</string>


</resources>
